--- a/META.yml
+++ b/META.yml
@@ -3,27 +3,27 @@ abstract: 'easy aliasing of methods and attributes in Moo'
 author:
   - 'haarg - Graham Knop (cpan:HAARG) <haarg@haarg.org>'
 build_requires:
-  Test::Fatal: 0
-  Test::More: 0.94
-configure_requires:
-  ExtUtils::MakeMaker: 0
-dynamic_config: 0
-generated_by: 'ExtUtils::MakeMaker version 6.66, CPAN::Meta::Converter version 2.130880'
+  Test::Fatal: '0.003'
+  Test::More: '0.94'
+dynamic_config: 1
+generated_by: 'ExtUtils::MakeMaker version 6.96, CPAN::Meta::Converter version 2.140640'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
-  version: 1.4
+  version: '1.4'
 name: MooX-Aliases
 no_index:
   directory:
     - t
-    - inc
+    - xt
 requires:
-  Class::Method::Modifiers: 1.05
-  Moo: 1.001
-  perl: 5.008001
-  strictures: 1
+  Class::Method::Modifiers: '1.05'
+  Moo: '1.001'
+  strictures: '1'
 resources:
-  homepage: http://github.com/haarg/MooX-Aliases
+  IRC: irc://irc.perl.org/#moose
+  bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=MooX-Aliases
+  license: http://dev.perl.org/licenses/
   repository: git://github.com/haarg/MooX-Aliases.git
-version: 0.001000
+version: '0.001001'
+x_authority: cpan:HAARG
