--- a/META.yml
+++ b/META.yml
@@ -6,7 +6,7 @@ build_requires:
   Test::Fatal: '0.003'
   Test::More: '0.94'
 dynamic_config: 1
-generated_by: 'ExtUtils::MakeMaker version 6.96, CPAN::Meta::Converter version 2.140640'
+generated_by: 'ExtUtils::MakeMaker version 6.98, CPAN::Meta::Converter version 2.141520'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -19,11 +19,12 @@ no_index:
 requires:
   Class::Method::Modifiers: '1.05'
   Moo: '1.001'
+  perl: '5.006'
   strictures: '1'
 resources:
   IRC: irc://irc.perl.org/#moose
   bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=MooX-Aliases
   license: http://dev.perl.org/licenses/
   repository: git://github.com/haarg/MooX-Aliases.git
-version: '0.001001'
+version: '0.001002'
 x_authority: cpan:HAARG
